--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,6 @@ font-size: 40px;
   gap: 2rem;
 }
 
-
 .cards_component{
   border: 2px solid blue;
   border-radius: 2rem;
@@ -505,7 +504,7 @@ a, a:hover, a:focus {
   font-size: 1rem;
   position: relative;
   margin-bottom: 0;
-  color: #475F7B;
+  color: #b3ceee;
   transition: 0.3s;
 }
 .rc-accordion-toggle.active .rc-accordion-title{
@@ -528,7 +527,23 @@ a, a:hover, a:focus {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  color: #727E8C;
+  color: #b3ceee;
+}
+
+.rc-accordion-body-2 p span{
+  color: #b3ceee;
+}
+
+.rc-accordion-body-2 p span>*{
+  color: #ffffff;
+}
+
+.rc-accordion-body-2 p{
+  margin: 2rem;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #b3ceee;
 }
 
 .links_div{
