--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,15 @@ body{
   background: rgb(0,0,0);
   background: linear-gradient(90deg, rgba(0,0,0,1) 50%, rgba(19,57,106,1) 100%);
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  /* height: 100%; */
+  /* padding: 2rem 0; */
+  height: 100vh;
+  /* height: auto; */
+  /* border: 2px solid red; */
 } 
 
 .logos{
@@ -147,6 +155,15 @@ body{
   }
 
   /* Vision Page Specific */
+
+  header{
+    /* margin-left: 20vw; */
+  }
+
+  .vision{
+    max-width: 1400px;
+    margin: 8rem auto;
+  }
   
   .vision_content{
     display: flex;
@@ -158,6 +175,7 @@ body{
   .vision_content>img{
     height: 18rem;
     margin-left: 2rem;
+    max-width: 500px;
     /* border: 2px solid blue; */
   }
   
@@ -227,10 +245,12 @@ body{
   
   .dev_cont{
     background-color: #121516;
+    padding-bottom: 3rem;
     /* border: 2px solid red; */
     border-radius: 2rem;
     width: 35%;
-    height: 45rem;
+    height: auto;
+    max-width: 450px;
     box-shadow: rgb(255, 255, 255) 0px 2px 4px, rgba(255, 255, 255, 0.87) 0px 7px 13px -3px, rgba(255, 255, 255, 0.951) 0px -3px 0px inset;
   }
   
@@ -264,7 +284,8 @@ body{
   
   .dev_img{
     margin: 2.5rem 0;
-    height: 30%;
+    /* height: 30%; */
+    width: 50%;
   }
   
   .dev_socials{
@@ -418,7 +439,7 @@ font-size: 40px;
   padding: 2rem;
   width: 70vw;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
 }
 
@@ -432,11 +453,10 @@ font-size: 40px;
   border-radius: 2rem;
   /* height: 25rem; */
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   background-color: #485174;
   box-shadow: rgba(255, 255, 255, 0.344) 1.95px 1.95px 2.6px;
   justify-content: space-around;
-
 }
 
 .cards_component_right{
@@ -479,9 +499,10 @@ font-size: 40px;
   margin: 1rem 0;
 }
 
-.cards_component_head>img{
+.cards_component>img{
   height: 8rem;
   width: 8rem;
+  margin: 1rem auto 0 auto;
   /* display: none; */
 }
 
@@ -507,9 +528,10 @@ font-size: 40px;
   margin: 1rem 0;
 }
 
-.cards_component_head>h1{
+.cards_component>h1{
   font-size: 1.2rem;
   margin: 1rem 0;
+  text-align: center;
   /* width: 50%; */
 }
 
@@ -541,11 +563,16 @@ a, a:hover, a:focus {
   letter-spacing: 0.3px;
   color: #475f7b;
   overflow: hidden;
-  margin: 2rem 1rem;
+  margin: 10rem 1rem;
+  text-align: center;
 }
+
+
 
 .form-heading{
   margin: 4rem 0;
+  margin-top: 1rem;
+  display: none;
 }
 
 .rc-accordion-toggle {
@@ -659,34 +686,45 @@ a, a:hover, a:focus {
 /* Responsiveness */
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 1000px) {
 
   /* Landing Page Media Queries */
 
   .landing{
-    padding: 150vh 0;
+    padding: 20vh 0;
     height: auto;
-    margin: 0;
+    /* margin: 0; */
   }
 
+  .main{
+    /* border: 2px solid green; */
+    margin: 20vh auto;
+  }
+
+  /* .particles-hai{
+    display: none;
+  } */
+
   .logos{
-    height: 15rem;
+    /* height: 15rem; */
+    height: 4rem;
   }
 
   .main-text>h1{
-    font-size: 10rem;
+    /* font-size: 10rem; */
+    font-size: 2.5rem;
     /* display: none; */
 
   }
 
-  .main-text>p{
-    font-size: 2.5rem;
-  }
-
   #landing-btn{
     top: 10rem;
-    padding: 1rem 2rem;
-    font-size: 4rem;
+    padding: 0.75rem 1.5rem;
+    /* font-size: 4rem; */
+    font-size: 1rem;
+    position: absolute;
+    top: 2rem;
+    right:2rem;
     /* display: none; */
   }
 
@@ -696,8 +734,8 @@ a, a:hover, a:focus {
 
   #landing-p-mob{
     display: block;
-    font-size: 3.5rem;
-    margin-left: 2rem;
+    font-size: 0.9rem;
+    margin-left: 0;
   }
 
 
@@ -715,7 +753,7 @@ a, a:hover, a:focus {
 
 .vision>h1{
   font-size: 3.5rem;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .vision_content{
@@ -731,7 +769,7 @@ a, a:hover, a:focus {
 
 .vision_content>p{
   padding: 2rem;
-  font-size: 1.8rem;
+  font-size: 1rem;
   /* border: 2px solid red; */
   background-color:rgb(55, 55, 55);
   border-radius: 2rem;
@@ -804,6 +842,15 @@ a, a:hover, a:focus {
   margin: 1.2rem;
 }
 
+nav{
+  margin: 2% 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* border: 5px solid red; */
+}
+
 nav>*{
   color: white;
   font-size: 0.7rem;
@@ -844,5 +891,26 @@ nav>*{
 }
 
 
+.not-found{
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+
+  width: 70vw;
+  margin: 3rem 0;
+}
+
+.not-found>h1{
+  /* border: 2px solid green; */
+  text-align: center;
+  display: none;
+}
 
 
+#no-data-img{
+  /* height: 100%; */
+  width: 90%;
+  margin: 2rem auto;
+  margin-bottom: 0;
+  /* border: 2px solid blue; */
+}
