--- a/client/src/App.css
+++ b/client/src/App.css
@@ -407,11 +407,78 @@ font-size: 40px;
   border: 2px solid red;
 } */
 
-.link_hai>img:hover{
+/* .link_hai>img:hover{
   box-sizing: border-box;
   opacity: 0.3;
   border: 1px solid white;
   border-radius: 30px;
+} */
+
+/* .link_hai {
+  position: relative;
+}
+
+.link_hai > img {
+  border: 2px solid transparent;
+  transition: opacity 0.3s ease;
+}
+
+.link_hai:hover > img {
+  opacity: 0.3;
+}
+
+.link_hai > img::after {
+  content: attr(data-skill-name);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.link_hai:hover > img::after {
+  opacity: 1;
+} */
+
+
+/*  */
+
+.link_hai {
+  position: relative;
+}
+
+.link_hai > img {
+  border: 2px solid transparent;
+  transition: opacity 0.3s ease;
+}
+
+.link_hai:hover > img {
+  opacity: 0.3;
+}
+
+.link_hai > img::after {
+  content: attr(data-skill-name);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.link_hai:hover > img::after {
+  opacity: 1;
 }
 
 
@@ -466,8 +533,16 @@ font-size: 40px;
   display: flex;
   flex-direction: column;
   background-color: #485174;
-  box-shadow: rgba(255, 255, 255, 0.344) 1.95px 1.95px 2.6px;
+  /* box-shadow: rgba(255, 255, 255, 0.344) 1.95px 1.95px 2.6px; */
+
+  /* box-shadow: rgba(255, 255, 255, 0.899) 0px 3px 8px; */
+
   justify-content: space-around;
+  background-color: #2d586e;
+  color: #ECFEE8;
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,116,139,1) 100%, rgba(255,255,255,1) 100%);
+
 }
 
 .cards_component_right{
@@ -524,14 +599,21 @@ font-size: 40px;
 }
 
 .exp_ul>li{
-  color:#000000;
+  color:#cbdff8;
   font-size: 1.2rem;
   font-weight: bold;
-  margin-top: 1rem;
+  margin: 1rem 0 0.5rem 0;
 }
 
-.exp_ul>li>span{
-  font-size: 1rem;
+
+
+.exp_ul>span>button{
+  color: #000000;
+  padding: 0.5rem 1rem;
+  border-radius: 10rem;
+  border: 1px solid black;
+  /* background-color:  #cbdff8; */
+
 }
 
 .contact{
@@ -540,9 +622,18 @@ font-size: 40px;
 }
 
 .cards_component>h1{
-  font-size: 1.2rem;
-  margin: 1rem 0;
+  font-size: 1.5rem;
+  margin-top: 2rem;
   text-align: center;
+  /* width: 50%; */
+}
+
+.cards_component>p{
+  font-size: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 0.75rem;
+  text-align: center;
+  color: #cbdff8;
   /* width: 50%; */
 }
 
