unused variables, warnings, and alt attributes dealt with

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -291,9 +291,9 @@ body{
 
   /* Vision Page Specific */
 
-  header{
-    /* margin-left: 20vw; */
-  }
+  /* header{
+    margin-left: 20vw;
+  } */
 
   .vision{
     max-width: 1400px;
