--- a/client/src/App.css
+++ b/client/src/App.css
@@ -249,6 +249,7 @@ body{
   
   #shift_nav{
     margin-right: 4rem;
+    border: 2px solid red;
   }
   
   .active{
@@ -372,7 +373,8 @@ body{
       }
       
       #shift_nav2{
-        margin: 1.5rem;
+        /* margin: 1.5rem; */
+        border: 2px solid green;
       }
    
 
@@ -523,56 +525,6 @@ font-size: 40px;
   bottom: -60px;
 }
 
-/* .slick-track>div:hover{
-  opacity: 0.3;
-} */
-
-/* .link_hai>img{
-  border: 2px solid red;
-} */
-
-/* .link_hai>img:hover{
-  box-sizing: border-box;
-  opacity: 0.3;
-  border: 1px solid white;
-  border-radius: 30px;
-} */
-
-/* .link_hai {
-  position: relative;
-}
-
-.link_hai > img {
-  border: 2px solid transparent;
-  transition: opacity 0.3s ease;
-}
-
-.link_hai:hover > img {
-  opacity: 0.3;
-}
-
-.link_hai > img::after {
-  content: attr(data-skill-name);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 5px 10px;
-  font-size: 14px;
-  font-weight: bold;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.link_hai:hover > img::after {
-  opacity: 1;
-} */
-
-
-/*  */
-
 .link_hai {
   position: relative;
 }
@@ -583,10 +535,10 @@ font-size: 40px;
 }
 
 .link_hai:hover > img {
-  opacity: 0.3;
+  opacity: 0.2;
 }
 
-.link_hai > img::after {
+/* .link_hai > img::after {
   content: attr(data-skill-name);
   position: absolute;
   top: 50%;
@@ -603,7 +555,28 @@ font-size: 40px;
 
 .link_hai:hover > img::after {
   opacity: 1;
+} */
+
+.link_hai:hover .overlay {
+  opacity: 1;
 }
+
+.link_hai .overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-60%, -50%);
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 2;
+}
+
+
 
 
 /* Skill Details */
