--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1158,6 +1158,13 @@ nav>*{
   font-size: 1rem;
 }
 
+.link_hai .overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 
 
