updated the hero image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -397,7 +397,7 @@ body{
     /* border: 5px solid red; */
     height: 35rem;
     border-radius: 5rem;
-    background-image: url(./images/lnmiit3.jpg);
+    background-image: url(./images/lnm.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     /* opacity: 0.7; */
